--- a/css/styles.css
+++ b/css/styles.css
@@ -581,7 +581,7 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 32px;
+  gap: 72px;
 }
 
 .team-li {
@@ -611,13 +611,14 @@ input {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 
 .team-socials-list {
   display: flex;
   justify-content: center;
   gap: 24px;
-  padding: 8px 16px 0 16px;
 }
 
 .team-socials-item {
@@ -767,7 +768,7 @@ input {
   background-color: #2e2f42;
 }
 
-.footer-container {
+.container-footer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -798,7 +799,6 @@ input {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-top: 72px;
   margin-bottom: 16px;
 }
 
@@ -891,7 +891,6 @@ input {
 
 .footer-subscribe-btn-icon {
   fill: #fff;
-  margin-left: 16px;
 }
 
 @media only screen and (max-width: 767px) {
