--- a/css/styles.css
+++ b/css/styles.css
@@ -958,6 +958,30 @@ input {
   }
 }
 
+.scroll-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 10px;
+
+  z-index: 9999999;
+
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  border: none;
+  border-radius: 50px;
+
+  color: inherit;
+  background-color: #4d5ae5;
+}
+
+.scroll-btn:hover {
+  background-color: #494f93;
+}
+
 /* Modal window */
 .backdrop {
   position: fixed;
