--- a/css/styles.css
+++ b/css/styles.css
@@ -132,24 +132,24 @@ input {
 }
 
 /* Mobile menu */
-.mobile-menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 72px 24px 40px 16px;
-  background-color: #fff;
+.js-mobile-menu {
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 72px 24px 40px 16px;
+  background-color: #fff;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   visibility: hidden;
   opacity: 0;
 }
 
-.mobile-menu .is-open {
+.js-mobile-menu.is-open {
   visibility: visible;
   opacity: 1;
 }
@@ -169,6 +169,13 @@ input {
   border: 1px solid rgba(0, 0, 0, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-close-btn:hover,
+.mobile-close-btn:focus {
+  background-color: #404bbf;
+  border: none;
+  fill: #fff;
 }
 
 .mobile-navigation {
