--- a/css/styles.css
+++ b/css/styles.css
@@ -1000,7 +1000,7 @@ input {
 .backdrop {
   width: 100%;
   height: 100%;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   display: flex;
